crates/php-parser/tests/fixtures/errors/invalid_foreach_missing_as.php
<?php
foreach ($items $item) {
    echo $item;
}